Creación de método para mostrar todos los nodos recorridos